<resources>
    <string name="app_name">GPA</string>
    <!--Registration Failed error-->
    <string name="MISSING_PARTNER_ID_MSG">PartnerID is not provided</string>
    <string name="MISSING_PUBLIC_KEY_MSG">PublicKey is not provided</string>
    <string name="INVALID_RSA_PUBLIC_KEY_MSG">PublicKey is not as per specification</string>
    <string name="INVALID_DATA_MSG">some data is still invalid</string>

    <string name="MISSING_PARTNER_ID">MISSING_PARTNER_ID</string>
    <string name="MISSING_PUBLIC_KEY">MISSING_PUBLIC_KEY</string>
    <string name="INVALID_RSA_PUBLIC_KEY">INVALID_RSA_PUBLIC_KEY</string>
    <string name="INVALID_DATA">INVALID_DATA</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Genie_service_Check">Genie Services not installed,please install it for the app to function properly.</string>
    <string name="map_genie">Do you want to map with genie?</string>
    <string name="map_genie_yes">YES</string>
    <string name="map_genie_no">NO</string>
    <string name="lang_not">Language not selected</string>
    <string name="akshara_template">Akshara Template</string>
    <string name="child_name">Child Name</string>
    <string name="child_name_hint">enter child name</string>
    <string name="father_name">Father\'s Name</string>
    <string name="father_name_hint">enter father\'s name</string>
    <string name="child_class">Class</string>
    <string name="child_class_hint">enter class name</string>
    <string name="gender">Gender</string>
    <string name="dob">DOB</string>
    <string name="dob_hint">select dob</string>
    <string name="language">Mother tongue</string>
    <string name="selectionType">Selection Type</string>
    <string name="invalid_event_message">Cuurent event is not a valid Telemetry event</string>
    <string name="validation_error_message">Cuurent event is not a valid json</string>
    <string name="invalid_event">INVALID_EVENT</string>
    <string name="db_error">DB_ERROR</string>
    <string name="db_error_message">Unable read or write database</string>
    <string name="validation_error">VALIDATION_ERROR</string>db_error


    <string-array name="menu_list">
        <item>Exit</item>

    </string-array>


    <string name="level">Do you need to collect data </string>
    <string name="btn_Next">Next</string>
    <string name="profile">Profile</string>
    <string name="Partner_empty">Partner name can not be empty</string>
    <string name="partnerId_empty">Partner id can not be empty</string>
    <string name="partnerPublicKey_empty">Partner public key  can not be empty</string>
    <string name="child_level">for each child</string>
    <string name="generic_level">unrelated to child</string>
    <string name="data_success">Data successfully submitted</string>


    <!--LevelFragment-->
    <string name="level_not_valid">Please create child in Genie for Child level</string>
    <string name="label_handle">Handle</string>
    <string name="label_gender">Gender</string>
    <string name="label_age">Age</string>
    <string name="label_class">Class</string>
    <string name="label_launch_genie">Launch Genie</string>
    <string name="label_create_child">Create Child</string>
    <string name="genie_info">Genie Info</string>
    <string name="personal_info">Personal Info</string>
    <string name="label_name">Name</string>
    <string name="label_address">Address</string>
    <string name="label_contact_no">Mobile / Landlines</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="class_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>


    <string name="district_default">PLEASE SELECT DISTRICT</string>
    <string name="block_default">PLEASE SELECT BLOCK</string>
    <string name="cluster_default">PLEASE SELECT CLUSTER</string>
    <string name="school_default">PLEASE SELECT SCHOOL</string>

    <string name="district">District</string>
    <string name="block">Block</string>
    <string name="cluster">Cluster</string>
    <string name="school">School</string>
    <string name="btn_Search_Child">Search Child</string>
</resources>
