<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_layout"
    android:background="@color/white"
    >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayoutFilter"
            android:padding="10dp"
            >
            <!--Level -->
            <org.partner.customviews.CustomTextView
                style="@style/text_style"
                android:text="@string/level"
                custom:fontAssetName="Roboto-Regular.ttf"
                />
           <RadioGroup
               android:id="@+id/radioGrpLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
               android:padding="10dp"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Level1"
                    android:text="@string/child_level"
                    android:layout_marginBottom="20dp"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Level2"
                    android:text="@string/generic_level"
                    />
            </RadioGroup>


        <!-- <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/spinner_style"
                android:popupBackground="@color/white"
                android:focusableInTouchMode="true"
                android:id="@+id/spinnerLevel"
                />
-->



        </LinearLayout>



    <org.partner.customviews.CustomButton
        android:id="@+id/btn_Next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"

        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_btn"
        android:background="@drawable/roundbutton"
        android:visibility="visible"
        android:gravity="center"
        android:text="@string/btn_Next"
        android:textColor="@color/color_text_lablel"
        android:textSize="@dimen/size_16"
        custom:fontAssetName="Roboto-Medium.ttf" />









</RelativeLayout>
